WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
168122
[GStreamer][MSE][EME] Fix decryptor assignment
https://bugs.webkit.org/show_bug.cgi?id=168122
Summary
[GStreamer][MSE][EME] Fix decryptor assignment
Olivier Blin
Reported
2017-02-10 09:53:11 PST
In AppendPipeline::parseDemuxerSrcPadCaps(), the new decryptor is a floating reference so we should not use the adopt GRefPtr constructor, but use the regular assignment operator that will sink the object. See previous pipeline fix in
r210851
and WPE commit 06020b18831e1c0eead34e2c1a5a4b7d026c227d.
Attachments
Patch
(2.16 KB, patch)
2017-02-10 09:59 PST
,
Olivier Blin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Olivier Blin
Comment 1
2017-02-10 09:59:56 PST
Created
attachment 301167
[details]
Patch
WebKit Commit Bot
Comment 2
2017-02-11 20:15:57 PST
Comment on
attachment 301167
[details]
Patch Clearing flags on attachment: 301167 Committed
r212200
: <
http://trac.webkit.org/changeset/212200
>
WebKit Commit Bot
Comment 3
2017-02-11 20:16:03 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug